# Jeu-d-Echec-Yalta

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/: TECH.md
docs/diagrammes/: cas_utilisation.puml  classes.puml  etats_transitions.puml
docs/rapport/: rapport.tex
docs/superpowers/plans/: 2026-04-23-ia-minmax.md
src/: main.cpp
src/controleur/: ControleurJeu.cpp  ControleurJeu.h
src/ia/: IAMinMax.cpp  IAMinMax.h
src/modele/: Couleur.h  Coup.h  GeometriePlateau.cpp  GeometriePlateau.h  IStrategieDeplacement.h  Joueur.h  Partie.cpp  Partie.h  Piece.cpp  Piece.h  PieceFactory.cpp  PieceFactory.h  Plateau.cpp  Plateau.h  Position.h  TypePiece.h
src/modele/strategies/: DeplacementCavalier.cpp  DeplacementCavalier.h  DeplacementFou.cpp  DeplacementFou.h  DeplacementPion.cpp  DeplacementPion.h  DeplacementReine.cpp  DeplacementReine.h  DeplacementRoi.cpp  DeplacementRoi.h  DeplacementTour.cpp  DeplacementTour.h
src/vue/: FenetrePrincipale.cpp  FenetrePrincipale.h  VuePlateau.cpp  VuePlateau.h
tests/: test_coups_speciaux.cpp  test_deplacements.cpp  test_ia.cpp
